# Plugin

./: .gitignore  OWNERS  README.en.md  README.md  Third_Party_Open_Source_Software_List.yaml  Third_Party_Open_Source_Software_Notice
contrib/age/: CMakeLists.txt  Makefile  README_zh.md  age--1.0.0.sql
contrib/age/doc/: AGE_adapt_opengauss_detail.md
contrib/assessment/: CMakeLists.txt  Makefile  OpenGaussConnection.cpp  OpenGaussConnection.h  README.md  Report.cpp  Report.h  Scan.cpp  Scan.h  assessment--1.0.sql  assessment.control  assessment.cpp  assessment.h  main.cpp
contrib/chparser/: CMakeLists.txt  META.json  Makefile  README.md  check-alpine.sh  check-debian.sh  chparser-backup-custom-dict.sh  chparser.control  chparser.cpp  chparser.h
contrib/chparser/docker/: dockerfile_arm  dockerfile_x86
contrib/chparser/expected/: chparser-alpine.out  chparser-debian.out
contrib/chparser/sql/: chparser--1.0.sql  chparser--unpackaged--1.0.sql  chparser.sql
contrib/datavec/: CHANGELOG.md  CMakeLists.txt  Dockerfile  META.json  Makefile  Makefile.win  README.md  datavec.control
contrib/datavec/sql/: datavec--0.1.0--0.1.1.sql  datavec--0.1.1--0.1.3.sql  datavec--0.1.3--0.1.4.sql  datavec--0.1.4--0.1.5.sql  datavec--0.1.5--0.1.6.sql  datavec--0.1.6--0.1.7.sql  datavec--0.1.7--0.1.8.sql  datavec--0.1.8--0.2.0.sql  datavec--0.2.0--0.2.1.sql  datavec--0.2.1--0.2.2.sql  datavec--0.2.2--0.2.3.sql  datavec--0.2.3--0.2.4.sql  datavec--0.2.4--0.2.5.sql  datavec--0.2.5--0.2.6.sql  datavec--0.2.6--0.2.7.sql  datavec--0.2.7--0.3.0.sql  datavec--0.3.0--0.3.1.sql  datavec--0.3.1--0.3.2.sql  datavec--0.3.2--0.4.0.sql  datavec--0.4.0--0.4.1.sql  datavec--0.4.1--0.4.2.sql  datavec--0.4.2--0.4.3.sql  datavec--0.4.3--0.4.4.sql  datavec--0.4.4--0.5.0.sql  datavec--0.5.0--0.5.1.sql  datavec--0.5.1--0.6.0.sql  datavec--0.6.0--0.6.1.sql  datavec--0.6.1--0.6.2.sql  datavec--0.6.2--0.7.0.sql  datavec--0.7.0--0.7.1.sql  datavec--0.7.1--0.7.2.sql  datavec.sql
contrib/datavec/src/: bitutils.cpp  bitvec.h  f2s.cpp  halfutils.cpp  halfutils.h  halfvec.cpp  halfvec.h  hnsw.cpp  hnsw.h  hnswbuild.cpp  hnswdelete.cpp  hnswinsert.c  hnswinsert.cpp  hnswscan.cpp  hnswutils.cpp  hnswvacuum.c  ivfbuild.cpp  ivfflat.cpp  ivfflat.h  ivfinsert.c  ivfkmeans.c  ivfkmeans.cpp  ivfscan.c  ivfscan.cpp  ivfutils.c  ivfutils.cpp  ivfvacuum.cpp  ryu_common.h  sampling.h  shortest_dec.h  sparsevec.c  sparsevec.h  vecindex.cpp  vecindex.h  vector.c  vector.cpp  vector.h
contrib/dolphin/: CMakeLists.txt  Makefile  cmake.sh  configure.mk  dolphin.control  make_check_postgresql.conf  parallel_schedule_dolphin  parallel_schedule_dolphinA  parallel_schedule_dolphinB  pg_builtin_proc.cpp  plugin_postgres.cpp  plugin_utility.cpp  tablecmds.cpp
contrib/dolphin/checklist/: checklist.md
contrib/dolphin/data/: column_copy.csv  empty.data  enum_empty_str_copy.csv  load-continuous_escape.txt  load-double_terminated.txt  load-escape_delimiter.txt  load-escape_itself.txt  load-float.txt  load-ignore.txt  load-same_escape_enclosed.txt  load-same_escape_enclosed2.txt  load-same_escape_enclosed3.txt  load-same_escape_enclosed4.txt  load-same_escape_enclosed5.txt  load-tailspace.txt  load1.csv  load2.csv  load3.csv  load4.csv  load5.csv  load6.csv  load7.csv  load8.csv  load9.csv  load_null.csv  load_quote.csv  load_quote2.csv
contrib/dolphin/doc/: ALTER-TABLE-PARTITION.md  ALTER-TABLE.md  ANALYZE-ANALYSE.md  AST.md  CREATE-INDEX.md  CREATE-TABLE-AS.md  CREATE-TABLE-PARTITION.md  CREATE-TABLE.md  CREATE-TABLESPACE.md  DEALLOCATE.md  DESCRIBE-TABLE.md  DROP-INDEX.md  DROP-TABLE.md  GRANT.md  INSERT.MD  INSERT.md  KILL.md  REVOKE.md  SELECT.md  SET-PASSWORD.md  SHOW-PROCESSLIST.md  SHOW_COLUMNS.md  SHOW_INDEX.md  SHOW_PLUGINS.md  SHOW_TABLES.md  SQL MODE.md  UPDATE.md  USE DB_NAME.md  pg_type_nonstrict_basic_value.md  unsigned类型.md  二进制类型.md  位串类型.md  字符处理函数和操作符.md  字符类型.md  存储过程（函数）REPLCAE和#注释.md  插件安装使用指导.md  数值类型.md  数字操作函数和操作符.md  日期和时间处理函数.md  时间数据类型.md  (+4 more)
contrib/dolphin/expected/: add_unique_index.out  ai.out  algorithm_opt.out  alter_tables.out  ansi_quotes_start.out  ansi_quotes_test.out  any_value_test.out  assignment_conversion_to_year.out  assignment_operator_test.out  ast.out  autoinc_sql_mode.out  b_auth_8_0.out  b_comments.out  b_compatibility_time_type.out  b_database_greatest.out  b_database_ifnull.out  b_database_least.out  b_database_stddev.out  b_database_subquery.out  b_database_sum.out  b_database_var.out  b_do_statment.out  b_format_supplemental_operators_test.out  b_plugin_signal_resignal.out  b_rowtype.out  b_system_view.out  bit_count.out  blob_with_parameter.out  bool_implicit_cast.out  bxconst_test.out  charset_gbk_b_db.out  charset_utf8mb4_b_db.out  column_name.out  column_quote_alias.out  connection_id.out  conv_cast_test.out  convert_truncated_warning.out  create_alter_server.out  create_function_core.out  create_index.out  (+264 more)
contrib/dolphin/include/: builtin_funcs.ini  fmgrtab.h  int8.h  plugin_config.h  plugin_postgres.h
contrib/dolphin/input/: b_auto_increment.source  b_caching_auth_change_noinited.source  b_compat_create_func_source.source  b_database_deadlock.source  b_database_diff_session.source  b_database_getlock.source  b_database_getlock_01.source  b_database_getlock_02.source  b_database_getlock_03.source  b_database_getlock_04.source  b_database_getlock_05.source  b_database_getlock_06.source  b_database_getlock_07.source  b_database_guc.source  b_database_isfreelock_01.source  b_database_isfreelock_02.source  b_database_isfreelock_03.source  b_database_isfreelock_04.source  b_database_isusedlock_01.source  b_database_isusedlock_02.source  b_database_isusedlock_03.source  b_database_isusedlock_04.source  b_database_lock_other_01.source  b_database_lock_other_02.source  b_database_lock_other_03.source  b_database_other_languages_01.source  b_database_other_languages_02.source  b_database_other_languages_03.source  b_database_other_languages_04.source  b_database_other_languages_05.source  (+43 more)
contrib/spq_plugin/: CMakeLists.txt  Makefile  spqplugin--1.0.sql  spqplugin.control  spqplugin.mk
(+5658 files in other folders)
